src/headers/JSPropertyNameArrayRef.h


JS_EXPORT JSPropertyNameArrayRef JSPropertyNameArrayRetain(JSPropertyNameArrayRef array);
JS_EXPORT void JSPropertyNameArrayRelease(JSPropertyNameArrayRef array);
JS_EXPORT size_t JSPropertyNameArrayGetCount(JSPropertyNameArrayRef array);
JS_EXPORT JSStringRef JSPropertyNameArrayGetNameAtIndex(JSPropertyNameArrayRef array, size_t index);